[package]
name = "program-launcher"
version = "0.1.0"
authors = ["Juuso Tuononen <jutuon@outlook.com>"]

[dependencies]
gilrs  = { version = "0.4"   , optional = true }
sdl2   = { version = "0.30.0", optional = true }
backend_library = { path = "backend_library"}

[dependencies.conrod]
git = "https://github.com/jutuon/conrod"
branch = "glium_with_non_glutin_window"
features = ["glium"]


[features]

default = ["glutin-window"]

sdl2-window = ["sdl2"]
glutin-window = ["gilrs", "conrod/winit"]


[workspace]